--- a/code/jupyter/SelfStudyResources/01 Basic Concepts.ipynb
+++ b/code/jupyter/SelfStudyResources/01 Basic Concepts.ipynb
@@ -29,13 +29,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## First step: Hello, World!"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -206,7 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "factor(5)"
+    "factor(5)\n"
    ]
   },
   {
@@ -853,13 +846,14 @@
     "is_tall_and_healthy = is_tall and not (is_overweight or is_obese)\n",
     "\n",
     "if is_tall_and_healthy:\n",
-    "    print(\"{} is tall and health (and handsome;)\".format(d['name']))"
+    "    print(\"{} is tall and healthy (and handsome;)\".format(d['name']))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "Examples of stupid coding that shows that the programmer does not yet understand boolean variables and conditions:"
    ]
   },
@@ -1181,7 +1175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
