--- a/code/jupyter/LessonNotes/Lesson  05-File IO.ipynb
+++ b/code/jupyter/LessonNotes/Lesson  05-File IO.ipynb
@@ -90,20 +90,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.795687209703e+01,1.557629314377e+03,1.191593706587e+00,1.059354827371e+00\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = open(\"exercise6_data.csv\",'r')\n",
+    "\n",
+    "# now read from the file\n",
+    "\n",
+    "for line in f:\n",
+    "    print(line, end='') # do not put the end line\n",
+    "    print(type(line)) # you see it's a string and cannot do mathematics on that\n",
+    "    break  # terminates the loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.795687209703e+01,1.557629314377e+03,1.191593706587e+00,1.059354827371e+00\n",
+      "['1.795687209703e+01', '1.557629314377e+03', '1.191593706587e+00', '1.059354827371e+00\\n']\n",
+      "[17.95687209703, 1557.629314377, 1.191593706587, 1.059354827371]\n",
+      "[1.79568721e+01 1.55762931e+03 1.19159371e+00 1.05935483e+00]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
+    "f = open(\"exercise6_data.csv\",'r')\n",
+    "\n",
+    "# now read from the file\n",
+    "\n",
+    "for line in f:\n",
+    "    print(line, end='') # do not put the end line\n",
+    "    \n",
+    "    vars = line.split(',') # split the data in the line with a comma; but every element is still a string\n",
+    "    \n",
+    "    print(vars)            \n",
+    "    # print(vars[0], float(vars[0]**2))  # convert string to a floating number to be able to do the math\n",
+    "        \n",
+    "    vals = []\n",
+    "    for var in vars:\n",
+    "        vals.append(float(var))\n",
+    "        \n",
+    "    print(vals)\n",
+    "        \n",
+    "    zi = np.array(vals)          # if you want to show them as an array\n",
+    "  \n",
+    "    print(zi)\n",
+    "    \n",
+    "    break  # terminates the loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.79568721e+01 1.55762931e+03 1.19159371e+00 1.05935483e+00]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a condense code\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "f = open(\"exercise6_data.csv\",'r')\n",
+    "\n",
+    "for line in f:       \n",
+    "        \n",
+    "    zi = np.array([float(x) for x in line.split(',')])          \n",
+    "  \n",
+    "    print(zi)\n",
+    "    \n",
+    "    break  # terminates the loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x: mean=10.127054375946278, stdev=5.0204001371842875\n",
+      "y1: mean=1023.0376305650618, stdev=4289.945369140428\n",
+      "y2: mean=3.928646271819789, stdev=1.705542095948374\n",
+      "y3: mean=1.9926873807139653, stdev=2.090070459208848\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
     "# initialize \n",
-    "means = np.zeros(4)\n",
-    "sigs  = np.zeros(4)\n",
+    "sumZ = np.zeros(4)  # [x, y1, y2, y3]\n",
+    "# if the variable looks like pythons command it will turn into green, e.g., sum  \n",
+    "sumZ2  = np.zeros(4)\n",
     "N = 0\n",
     "\n",
-    "# collect data\n",
+    "# LOOP:\n",
     "\n",
-    "# YOUR CODE HERE ...\n"
+    "f = open(\"exercise6_data.csv\",'r')\n",
+    "\n",
+    "for line in f:\n",
+    "    N += 1\n",
+    "    zi = np.array([float(x) for x in line.split(',')])       #list of values for ONE ROW\n",
+    "    sumZ += zi\n",
+    "    sumZ2 += zi**2\n",
+    "    \n",
+    "# AFTER LOOP\n",
+    "mean = sumZ / N\n",
+    "sig2 = sumZ2 / N - mean**2\n",
+    "sig = np.sqrt(sig2)\n",
+    "\n",
+    "# Output\n",
+    "\n",
+    "for name, m, s in zip(('x', 'y1', 'y2', 'y3'), mean, sig):\n",
+    "    print(\"{}: mean={}, stdev={}\".format(name, m,s))"
    ]
   },
   {
